--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "build": "echo \"No build specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
